# Indy7

./: .gitignore  .gitmodules  README.md  robot_experiments.ipynb
mpc/: CMakeLists.txt  README.md  package.xml
mpc/src/: mpc_settings.hpp  robot_driver_jpos.cpp  trajectory_publisher.cpp  trajopt_node.cpp  trajopt_node.cu
mpc/trajectories/: figure8_traj_eePos_meters.csv
trajectories/: figure8_traj_eePos_meters.csv  figure8_traj_jpos_rad.csv
